add going Deeper

--- a/Exploration/Quest6/네이버 영화리뷰 감성분석.ipynb
+++ b/Exploration/Quest6/네이버 영화리뷰 감성분석.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86efdcda",
+   "id": "82a99eae",
    "metadata": {},
    "source": [
     "# 데이터 가져오기"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3348344",
+   "id": "8d3bcdb1",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327a3d33",
+   "id": "2afa54c8",
    "metadata": {},
    "source": [
     "## 1) 데이터 준비 및 확인"
@@ -46,8 +46,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1e90684f",
-   "metadata": {},
+   "id": "6765cc26",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6086ef51",
+   "id": "d8fa9dfe",
    "metadata": {},
    "source": [
     "## 2) 데이터로더 구성 "
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ae1d15",
+   "id": "f74d9de6",
    "metadata": {},
    "source": [
     "### 결측치 확인"
@@ -188,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc6767bf",
+   "id": "b218014c",
    "metadata": {
     "scrolled": false
    },
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d49c42",
+   "id": "094332ef",
    "metadata": {},
    "source": [
     "### 중복확인"
@@ -224,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8154e9ae",
+   "id": "5371795c",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fac37e60",
+   "id": "db152e50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4850a3f",
+   "id": "3d377be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40f7fce9",
+   "id": "a0b32a9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56a2601",
+   "id": "1db96dbc",
    "metadata": {},
    "source": [
     "## 3) 모델 구성을 위한 데이터 분석 및 가공"
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bebb4a06",
+   "id": "0b4b3fa9",
    "metadata": {},
    "source": [
     "### 데이터셋 문장 길이 분포 확인"
@@ -375,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a81cb923",
+   "id": "03992f49",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7f7af2",
+   "id": "46c8698f",
    "metadata": {},
    "source": [
     "### keras.preprocessing.sequence.pad_sequences 을 활용한 패딩 추가"
@@ -418,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c32aca6e",
+   "id": "44a41676",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989ba124",
+   "id": "907c3c2f",
    "metadata": {},
    "source": [
     "## 4) validation set 구성"
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d41873",
+   "id": "3efedadc",
    "metadata": {},
    "source": [
     "### validation set 분리"
@@ -464,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "44161ab1",
+   "id": "c6eec4b8",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "71f75c85",
+   "id": "f8207623",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f393972",
+   "id": "ceb264b9",
    "metadata": {},
    "source": [
     "## 5) RNN, CNN, NN 모델 구성, 모델 훈련, 시각화"
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e105477",
+   "id": "637c0705",
    "metadata": {},
    "source": [
     "**1)RNN(LSTM을 활용한)** "
@@ -527,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b5052208",
+   "id": "d2727c60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "829b1f94",
+   "id": "3343484f",
    "metadata": {
     "scrolled": false
    },
@@ -579,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "135992aa",
+   "id": "39a0b56f",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9388e0f3",
+   "id": "a2179079",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d5b63c68",
+   "id": "7b63c61a",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3035aaf3",
+   "id": "d9351905",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7707be21",
+   "id": "4e0a1a18",
    "metadata": {
     "scrolled": true
    },
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ec1507c",
+   "id": "32c7c05a",
    "metadata": {},
    "source": [
     "**Word2Vec**"
@@ -768,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "586248a0",
+   "id": "7fed0153",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "39eb8b4f",
+   "id": "39f39f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "95d08917",
+   "id": "7d45b689",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "614745d2",
+   "id": "5dcc6c08",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d796f0a",
+   "id": "d2f396c0",
    "metadata": {},
    "source": [
     "**2)CNN(1D CONV)**"
@@ -877,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "0bc034e1",
+   "id": "17f9b6f8",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2b08f417",
+   "id": "f4c12c29",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "60dedb84",
+   "id": "932b0298",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f987cc8d",
+   "id": "4f075c24",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "b6031615",
+   "id": "f57731dd",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "5326e6f0",
+   "id": "7bfbd4a1",
    "metadata": {
     "scrolled": true
    },
@@ -1096,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "189b6724",
+   "id": "c724c24a",
    "metadata": {
     "scrolled": true
    },
@@ -1118,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "3d64f764",
+   "id": "ad4ec03d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e9c21b53",
+   "id": "e4ffeb0b",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0165c92a",
+   "id": "5992cbf7",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "485f9032",
+   "id": "df5592f7",
    "metadata": {},
    "source": [
     "**3)NN(기본적인 NN)**"
@@ -1204,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6fdd957e",
+   "id": "ab4c7201",
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a74e8f2d",
+   "id": "668f84f1",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3f56afce",
+   "id": "d2448015",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3de6c3b8",
+   "id": "cc406f04",
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4099395d",
+   "id": "4ae57d1a",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a8356653",
+   "id": "f34d7ab6",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6886ae15",
+   "id": "c19bd748",
    "metadata": {},
    "source": [
     "## 6)한국어 Word2Vec 임베딩 활용"
@@ -1426,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1831eae5",
+   "id": "4b2a9202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "d44ce76a",
+   "id": "aed6083e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b4330060",
+   "id": "5c7d4be9",
    "metadata": {
     "scrolled": false
    },
@@ -1492,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6c89c20b",
+   "id": "e48df69a",
    "metadata": {
     "scrolled": true
    },
@@ -1525,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "6528b9c6",
+   "id": "e343ffa3",
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "718ae9db",
+   "id": "5043de74",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ed42cb",
+   "id": "2f06d077",
    "metadata": {},
    "source": [
     "### 모델 구성 및 학습"
@@ -1575,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "8deaca6b",
+   "id": "55052f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "e27a8dc0",
+   "id": "5bb4a228",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "85f69da0",
+   "id": "e45facce",
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a4b66d20",
+   "id": "60e290f3",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18cd6f26",
+   "id": "12048d7e",
    "metadata": {},
    "outputs": [],
    "source": []
