--- a/GoingDeeper/Quest5/Transformer로 번역기 만들기.ipynb
+++ b/GoingDeeper/Quest5/Transformer로 번역기 만들기.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a33e091c",
+   "id": "cbdd6294",
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "09f0b385",
+   "id": "cce80ac7",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d52be54",
+   "id": "86d925d0",
    "metadata": {},
    "source": [
     "# 1. 데이터 전처리"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c214734",
+   "id": "9a36bd90",
    "metadata": {},
    "source": [
     "## 1-1) 데이터 정제 및 토큰화"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "3fd6f030",
+   "id": "b236d556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "5dc0bca1",
+   "id": "26f3fdc3",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc71335",
+   "id": "825f6c04",
    "metadata": {},
    "source": [
     "## 1-2) 정제함수 정의\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b2938509",
+   "id": "5f35843c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f92cda9",
+   "id": "e4ae81e1",
    "metadata": {},
    "source": [
     "## 1-3) 토큰화\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "712e13bb",
+   "id": "daaa0426",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c60146de",
+   "id": "e76bccb1",
    "metadata": {
     "scrolled": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "113fda74",
+   "id": "7cde9e5c",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "c5a2b01c",
+   "id": "6af19592",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "bb8449b6",
+   "id": "0c59cba2",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e93446",
+   "id": "77931b7d",
    "metadata": {},
    "source": [
     "## 1-4) 패팅 처리 및 텐서 변환"
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "f08772d6",
+   "id": "1a5d0fa1",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "a92ac9ee",
+   "id": "a6f6094b",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "1b11f95d",
+   "id": "5f1c4ea6",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb6d0e9",
+   "id": "dfde7aff",
    "metadata": {},
    "source": [
     "# 2. 모델 설계"
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d6c4c0",
+   "id": "980f2149",
    "metadata": {},
    "source": [
     "## 2-1) 모델 블럭 제작"
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90aeec5",
+   "id": "93bd9f19",
    "metadata": {},
    "source": [
     "### Positional Encoding"
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "d3c8e619",
+   "id": "40ee43a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3b79c4",
+   "id": "c235a588",
    "metadata": {},
    "source": [
     "### Multi-Head Attention"
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "f17645a1",
+   "id": "b92601a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98cd2167",
+   "id": "e7683afe",
    "metadata": {},
    "source": [
     "### FFN"
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "1a445f6e",
+   "id": "ed0c13d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29203e0",
+   "id": "d737a8a5",
    "metadata": {},
    "source": [
     "## 2-2) 모듈 조립"
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3639c1d9",
+   "id": "eac50122",
    "metadata": {},
    "source": [
     "### EncoderLayer"
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "9ff1876a",
+   "id": "94eb6241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f3dd6b",
+   "id": "febc24c1",
    "metadata": {},
    "source": [
     "### DecoderLayer"
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "9745d9c3",
+   "id": "86aebd11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5967e03d",
+   "id": "8e1570d4",
    "metadata": {},
    "source": [
     "### Encoder"
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "bdfc6577",
+   "id": "7cb4ae31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930fb64d",
+   "id": "9a67e9ee",
    "metadata": {},
    "source": [
     "### Decoder"
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "a02d9c0b",
+   "id": "89f4e49e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0193574c",
+   "id": "c23882b3",
    "metadata": {},
    "source": [
     "### Transformer"
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "335cb92c",
+   "id": "77b7e1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7acf05f2",
+   "id": "623756d4",
    "metadata": {},
    "source": [
     "### mask"
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "51785a96",
+   "id": "dcbdb754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f1dc28",
+   "id": "b30a044e",
    "metadata": {},
    "source": [
     "# Step 3. 훈련하기\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11152ba6",
+   "id": "273a6570",
    "metadata": {},
    "source": [
     "## 3-1) Transformer 선언\n",
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "4f1b0403",
+   "id": "ce6e9468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3365ec59",
+   "id": "56d761ca",
    "metadata": {},
    "source": [
     "## 3-2) learning_rate, optimizer, Loss정의\n",
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b53e167",
+   "id": "9a03b181",
    "metadata": {},
    "source": [
     "### learning_rate"
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "c18414cc",
+   "id": "82c8288b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d717723",
+   "id": "ae2aa0e0",
    "metadata": {},
    "source": [
     "### optimizer"
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "cb2dff85",
+   "id": "c55f92c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a71182ec",
+   "id": "c4ecbb14",
    "metadata": {},
    "source": [
     "### Loss\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "fedfa24d",
+   "id": "4889b01a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b202393b",
+   "id": "866d1f3a",
    "metadata": {},
    "source": [
     "## 3-3) Train_step\n",
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "e1e051eb",
+   "id": "b04ef244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0fc2deb",
+   "id": "088c123d",
    "metadata": {},
    "source": [
     "### 번역생성 함수"
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "189ca37b",
+   "id": "e224ab25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "5fd3d317",
+   "id": "b129d66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b4e834ad",
+   "id": "44b3ce7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff827545",
+   "id": "f2ac573c",
    "metadata": {},
    "source": [
     "## 3-4) training"
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "282a2a7c",
+   "id": "4dcafb6c",
    "metadata": {
     "scrolled": false
    },
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e7c38a",
+   "id": "4cbbd8fb",
    "metadata": {},
    "source": [
     "# 테스트기록"
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0891e7f0",
+   "id": "bf077f90",
    "metadata": {},
    "source": [
     "### (1)"
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed243b7",
+   "id": "d0e25d15",
    "metadata": {},
    "source": [
     "- Input: 오바마는 대통령이다.\n",
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1cb78b",
+   "id": "2a03c1d8",
    "metadata": {},
    "source": [
     "첫번째 문장은 잘 해석했으나 나머지 문장의 해석이 부족함\n",
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c096a3dc",
+   "id": "6d71e9bc",
    "metadata": {},
    "source": [
     "### (2)"
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc0864c",
+   "id": "b73ea920",
    "metadata": {},
    "source": [
     "Input: 오바마는 대통령이다.\n",
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e643af38",
+   "id": "785d590e",
    "metadata": {},
    "source": [
     "- 문장 증강후 표현력이 늘었음\n",
@@ -1913,9 +1913,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b656c20b",
+   "metadata": {},
+   "source": [
+    "### 후기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8a3e5f",
+   "metadata": {},
+   "source": [
+    "배운점\n",
+    "- attention 모델에 대해서 직관적으로 이해할 수 있었다.\n",
+    "- SeqtoSeq 모델의 성능보다 transformer 모델의 성능이 비약적으로 좋을 것을 체감했다\n",
+    "\n",
+    "아쉬운점\n",
+    "- 여전히 학습속도가 느려서 다양한 하이퍼파라미터에 대한 test를 진행하지 못해서 아쉬웠다\n",
+    "\n",
+    "느낀점\n",
+    "- 수학적으로는 이해하기 어려웠는데 코드로 접근하니까 이해할 수 있었던 부분이 많았다.\n",
+    "- 아직 수식이나 코드적으로 추가적인 이해가 필요하다고 생각했다.\n",
+    "\n",
+    "어려웠던점\n",
+    "- loss는 떨어지지만 채팅성능이 좋아지기도 하고 않좋아지기도 하였는데 어느 타이밍이 가장 좋은 성능을 내는지 판단하기 어려웠다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968db373",
+   "id": "a612bf7b",
    "metadata": {},
    "outputs": [],
    "source": []
